--- a/CNewsProject/Views/Account/Profile.cshtml
+++ b/CNewsProject/Views/Account/Profile.cshtml
@@ -22,34 +22,23 @@
     </div>
     @{
         <aside class="col-3">
-            @*//TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu *@
-            @*//TODO SNARAST make pretty uwu *@
-            @{
-                //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu 
-                @*//TODO SNARAST make pretty uwu *@
-                if (Model.SubInfo != null) //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu 
-                    @*//TODO SNARAST make pretty uwu *@
-                {
-                    //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu 
-                    @*//TODO SNARAST make pretty uwu *@
-                    <p>@Model.SubInfo.SubscriptionType.TypeName</p> //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu 
-                    @*//TODO SNARAST make pretty uwu *@
-                    <p>@Model.SubInfo.HistoricalPrice</p> //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu 
-                    @*//TODO SNARAST make pretty uwu *@
-                    <p>@Model.SubInfo.RenewedDate</p> //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu 
-                    @*//TODO SNARAST make pretty uwu *@
-                    <p>@Model.SubInfo.ExpiresDate</p> //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu 
-                    @*//TODO SNARAST make pretty uwu *@<br/>
-                    <a class="btn btn-primary text-white" asp-controller="Subscription" asp-action="Index">Manage Subscription</a> //TODO maybe change this to a different view later
-//TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu //TODO SNARAST make pretty uwu 
-                }
-                else
-                {
-                    <br/>
-                    <a class="btn btn-primary text-white" asp-controller="Subscription" asp-action="Index">Subscribe Now</a>
-                }
-            }
-
-        </aside>
+            <div class="better-card">
+    @{
+        if (Model.SubInfo != null)
+        {
+            <p style="font-weight: bold;">@Model.SubInfo.SubscriptionType.TypeName </p>
+            <p> @Model.SubInfo.HistoricalPrice kr / Month</p>
+            <p>From: @Model.SubInfo.RenewedDate</p>
+            <p>To: @Model.SubInfo.ExpiresDate</p>
+            <a class="btn btn-primary text-white" asp-controller="Subscription" asp-action="Index">Manage Subscription</a>
+        }
+        else
+        {
+            <br/>
+            <a class="btn btn-primary text-white" asp-controller="Subscription" asp-action="Index">Subscribe Now</a>
+        }
+    }
+            </div>
+</aside>
     }
 </div>
