--- a/CNewsProject/wwwroot/css/site.css
+++ b/CNewsProject/wwwroot/css/site.css
@@ -254,3 +254,18 @@
 .c-gradient-90.accordion-button:after {
     background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
 }
+
+.better-card{
+    background-color: #ffefcc;
+    border: 1px solid #ffe7b3;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+#newsLetterSettingsForm .newsLetterSettingsBackground:nth-child(odd){
+    background-color: #ffefcc;
+}
+
+.d-flex input[type="checkbox"]{
+    place-content: end;
+} 
