--- a/CNewsProject/Views/Shared/_CategoriesDropdownPartial.cshtml
+++ b/CNewsProject/Views/Shared/_CategoriesDropdownPartial.cshtml
@@ -36,7 +36,7 @@
 
         <a id="weatherHistory" class="dropdown-item" asp-controller="Weather" asp-action="WeatherHistory">Weather History</a>
 
-        <a id "exchangeRate" class="dropdown-item" asp-controller="ExchangeRate" asp-action="History">Exchange Rate History</a>
+        <a id="exchangeRate" class="dropdown-item" asp-controller="ExchangeRate" asp-action="History">Exchange Rate History</a>
 
     </div>
 </li>
