some more tweaks on profile

--- a/CNewsProject/Views/Shared/Components/EditAccount/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/EditAccount/Default.cshtml
@@ -12,10 +12,6 @@
     <label asp-for="Email"></label><br/>
     <input disabled asp-for="Email"/>
 
-    <div class="form-group">
-        Fire Mode? <input type="checkbox" asp-for="Fire"/>
-    </div>
-
-    <button type="submit" class="btn btn-primary" id="save-edit-acc">Save</button>
-    <button type="reset" class="btn btn-danger edit-acc-btn">Cancel</button><br/>
+    <button type="submit" class="btn btn-primary" id="save-edit-acc" style="margin-top: 4px;">Save</button>
+    <button type="reset" class="btn btn-danger edit-acc-btn" style="margin-top: 4px;">Cancel</button><br/>
 </form>
