--- a/CNewsProject/Views/Account/Profile.cshtml
+++ b/CNewsProject/Views/Account/Profile.cshtml
@@ -13,7 +13,7 @@
 <h1>@profileName</h1>
 <div class="row">
     <div class="col-9">
-        <div>
+        <div class="col-4">
             <vc:edit-account user="@Model.User"></vc:edit-account>
         </div>
         <div>
