--- a/CNewsProject/Views/Subscription/Success.cshtml
+++ b/CNewsProject/Views/Subscription/Success.cshtml
@@ -1,6 +1,29 @@
 ﻿<div class="text-center">
-	@* <h1>Payment is Successful!</h1> *@
 	<h1 style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> Thank You For Subscribing! Enjoy Unlimited Access To Our Website. </h1>
 	<img src="https://ruperhat.com/wp-content/uploads/2020/06/Paymentsuccessful21.png" alt="Payment Successful Image" />
 	<h5 style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> We appreciate your choice! </h5>
+     <a href="/" class="payment-success-button">Continue Exploring</a>
 </div>
+@* <style>
+    .payment-success-button {
+        display: inline-block;
+        padding: 15px 30px;
+        background-color: #4CAF50; /* Green color */
+        color: white;
+        text-decoration: none;
+        border: none;
+        border-radius: 5px;
+        font-size: 1.2em;
+        font-weight: bold;
+        cursor: pointer;
+        transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Add box-shadow transition */
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+    }
+
+        .payment-success-button:hover {
+            background-color: #45a049;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Increase shadow on hover */
+        }
+</style> *@
+
+        
