--- a/CNewsProject/Views/Shared/_searchBarWithSuggestionsPartial.cshtml
+++ b/CNewsProject/Views/Shared/_searchBarWithSuggestionsPartial.cshtml
@@ -48,19 +48,19 @@
 </style>
 
 <div id="@Model.ContainerId">
-    <div class="autocomplete" style="width:200px;">
+    <div class="autocomplete" style="width:200px; margin-bottom: 8px;">
         @{
             if (Model.ControllerParameter == "No Parameter")
             {
-                <input autocomplete="off" id="@Model.InputFieldId" type="text" placeholder="@Model.Placeholder">
+                <input class="form-control" autocomplete="off" id="@Model.InputFieldId" type="text" placeholder="@Model.Placeholder">
             }
             else
             {
-                <input autocomplete="off" id="@Model.InputFieldId" type="text" name="@Model.ControllerParameter" placeholder="@Model.Placeholder">
+                <input class="form-control" autocomplete="off" id="@Model.InputFieldId" type="text" name="@Model.ControllerParameter" placeholder="@Model.Placeholder">
             }
         }
     </div>
-    <div class="btn btn-primary" id="@Model.ButtonId">@Model.ButtonName</div>
+    <div style="margin-bottom: 3px;" class="btn btn-primary" id="@Model.ButtonId">@Model.ButtonName</div>
 </div>
 
 
