--- a/CNewsProject/Views/Journalist/EditArticle.cshtml
+++ b/CNewsProject/Views/Journalist/EditArticle.cshtml
@@ -107,7 +107,7 @@
             @*offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10*@
             <div class="row">
                 <div class="col-2">
-                    <a asp-action="Index" title="@DiscTip" class="btn btn-danger">@DiscBtn</a>
+                    <a asp-action="DeleteArticle" asp-route-id="@Model.ArticleId" title="@DiscTip" class="btn btn-danger">@DiscBtn</a>
                 </div>
                 <div class="col-10">
                     <div class="row justify-content-end">
