--- a/CNewsProject/Views/Shared/_LayoutNews.cshtml
+++ b/CNewsProject/Views/Shared/_LayoutNews.cshtml
@@ -116,11 +116,11 @@
 </audio>
 <partial name="_CookieConsentPartial"/>
 <div class="row">
-<div class="d-flex justify-content-end fixed-bottom offset-11 col-1" style="z-index: 500;" >
+<div class="c-click-through d-flex justify-content-end fixed-bottom offset-11 col-1" style="z-index: 500;" >
     <img id="bubblebrain" style="margin-bottom: 250px; margin-right: 20px; display:none;" height="150px" src="/Content/Images/brainsbubble.png"><img id="bubblefriend" style="margin-bottom: 250px; margin-right: 20px; display:none;" height="150px" src="/Content/Images/friendbubble.png">
 </div>
 <div class="d-flex justify-content-end fixed-bottom offset-11 col-1" style="z-index: 500;">
-    <div><img height="250px" src="/Content/Images/zombee.png" alt="zomb"/></div>
+    <div class="c-click-through"><img height="250px" src="/Content/Images/zombee.png" alt="zomb"/></div>
     
 </div>
 </div>
@@ -191,7 +191,7 @@
 
         // zombie
 
-        setInterval(Speak, 500000);
+        setInterval(Speak, 50000);
         setTimeout(Hello, 4000);
 
         function Speak(){
