--- a/CNewsProject/Views/Account/Profile.cshtml
+++ b/CNewsProject/Views/Account/Profile.cshtml
@@ -12,8 +12,8 @@
 
 <h1>@profileName</h1>
 <div class="row">
-    <div class="col-9">
-        <div class="col-4">
+    <div class="col-md-9">
+        <div class="col-md-4">
             <vc:edit-account user="@Model.User"></vc:edit-account>
         </div>
         <div>
@@ -21,7 +21,7 @@
         </div>
     </div>
     @{
-        <aside class="col-3">
+        <aside class="col-md-3">
             <div class="better-card">
     @{
         if (Model.SubInfo != null)
