homogenised a bunch of views. also responsive tables?? :O

--- a/CNewsProject/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/CNewsProject/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,2 +1,5 @@
-﻿<h1>Forgot Password Confirmation</h1>
-<h4>Successfully Sent an email with reset link. Please go to your email.</h4>
+﻿
+<div class="offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10">
+    <h4>A reset link has been sent to you email.</h4>
+    <h4>This may take several minutes</h4>
+</div>
