--- a/CNewsProject/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/CNewsProject/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,8 +1,5 @@
-﻿<h1>Reset Password Confirmation</h1>
-
-<p>
-    Password has been reset. Please <a asp-action="Login">Login here</a>
-</p>
-<p>
-    Unless you manually got here via the URL. then nothing really happened.
-</p>
+﻿<div class="offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10">
+<h4>
+    Password has been reset. You can now log in
+</h4>
+</div>
