--- a/CNewsProject/Views/Account/Update.cshtml
+++ b/CNewsProject/Views/Account/Update.cshtml
@@ -1,7 +1,9 @@
 ﻿@model AppUser
 @{
 	ViewData["Title"] = "UPDATE USER";
-}	
+}
+
+@* THIS VIEW IS NEVER USED *@
 
 <h1 class="bg-info text-white">Update User</h1>
 <a asp-action="Index" class="btn btn-secondary">Back</a>
@@ -26,3 +28,5 @@
 	</div>
 	<button type="submit" class="btn btn-primary">Save</button>
 </form>
+
+@* THIS VIEW IS NEVER USED *@
