--- a/CNewsProject/Views/Admin/Index.cshtml
+++ b/CNewsProject/Views/Admin/Index.cshtml
@@ -1,8 +1,10 @@
-﻿<h1>
-    This the admin page bruv
+﻿<div class="offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10">
+<h1>
+    Admin
 </h1>
 
 <a class="btn btn-primary" asp-action="Roles">Roles</a>
 <a class="btn btn-primary" asp-action="Users">Users</a>
 <a class="btn btn-primary" asp-action="SubscriptionTypes">Subscriptions</a>
 <a class="btn btn-primary" asp-action="Statistics">Statistics</a>
+</div>
