--- a/CNewsProject/wwwroot/css/site.css
+++ b/CNewsProject/wwwroot/css/site.css
@@ -134,9 +134,10 @@
 
 /*Stripe*/
 .shamsForm {
-    background: #fff;
+    background: #ffefcc;
     padding: 30px;
     border-radius: 10px;
+    border-color: #ffe7b3;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 400px;
     width: 100%;
@@ -193,18 +194,18 @@
 }
 
 .shamsButton {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
+    /*background-color: #4CAF50;*/
+    /*color: white;*/
+    /*padding: 12px 20px;*/
+    /*border: none;*/
+    /*border-radius: 5px;*/
+    /*cursor: pointer;*/
+    /*font-size: 16px;*/
     width: 100%;
 }
 
     .shamsButton:hover {
-        background-color: #45a049;
+        /*background-color: #45a049;*/
     }
 
 .formDiv {
@@ -322,4 +323,43 @@
 
 .ThisClassIsPurelyForCategoryIds:checked{
     margin-left: 0;
-} 
+}
+
+
+@media
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px) {
+
+    /* Force table to not be like tables anymore */
+    table, thead, tbody, th, td, tr {
+        display: block;
+    }
+
+    /* Hide table headers (but not display: none;, for accessibility) */
+    thead tr {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+    }
+
+    tr { border: 1px solid #ccc; }
+
+    .table td {
+        /* Behave  like a "row" */
+        border: none;
+        border-bottom: 1px solid #eee;
+        position: relative;
+        padding-left: 25%;
+    }
+
+    .table td:before {
+        /* Now like a table header */
+        position: absolute;
+        /* Top/left values mimic padding */
+        top: 6px;
+        left: 6px;
+        width: 45%;
+        padding-right: 10px;
+        white-space: nowrap;
+    }
+}
