--- a/CNewsProject/Views/Account/ConfirmEmail.cshtml
+++ b/CNewsProject/Views/Account/ConfirmEmail.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "ConfirmEmail";
 }
 
-<h1>Confirm Email</h1>
-<p>
+<div class="offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10">
+<h4>
     Thank you for confirming your email.
-</p>
+</h4>
+</div>
