--- a/CNewsProject/Views/Account/DeleteMyAccount.cshtml
+++ b/CNewsProject/Views/Account/DeleteMyAccount.cshtml
@@ -1,13 +1,14 @@
 ﻿@model AppUser
 
-
-<h1>
-    Are you Sure you wanna delete the account @Model.UserName
-</h1>
+<div class="offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10">
+<h4>
+    Are you Sure you want to delete the account @Model.UserName
+</h4>
 
 <form method="post">
     <input type="hidden" asp-for="Id" />
 
-    <button type="submit">YES</button>
-    <a asp-action="Profile">NO</a>
+    <button class="btn btn-primary" type="submit">YES</button>
+    <a class="btn btn-danger" asp-action="Profile">NO</a>
 </form>
+</div>
