--- a/CNewsProject/Views/Account/Error.cshtml
+++ b/CNewsProject/Views/Account/Error.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Error";
 }
-
-<h1 class="text-danger">Error</h1>
-<h2 class="text-danger">
-    An error occurred while processing your request.
+<div class="offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10">
+<h3 class="text-danger">Error</h3>
+<h4 class="text-danger">
+    An error occurred while processing your request.<br/>
     Please try again later.
-</h2>
-<h1>Klarspråk: Någonting gick åt HELT JÄVLA HELVETE</h1>
+</h4>
+</div>
