--- a/CNewsProject/Views/Account/ForgotPassword.cshtml
+++ b/CNewsProject/Views/Account/ForgotPassword.cshtml
@@ -3,9 +3,9 @@
 <div class="row">
     <div class="offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10">
         <form asp-action="ForgotPassword" method="post">
-            <h3>Email please</h3>
+            <h4>Enter Email</h4>
             <input name="email" class="form-control"/>
-            <input type="submit" class="mt-3 btn btn-primary"/>
+            <input type="submit" class="mt-3 btn btn-primary" value="Send"/>
         </form>
     </div>
 </div>
