--- a/CNewsProject/Views/Account/ResetPassword.cshtml
+++ b/CNewsProject/Views/Account/ResetPassword.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewData["Title"] = "Reset Password";
 }
-
-<h1 class="bg-info text-white">Reset Password</h1>
+<div class="offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10">
+<h4>Reset Password</h4>
 <div class="text-danger" asp-validation-summary="All"></div>
 
 <form asp-action="ResetPassword" method="post">
@@ -13,11 +13,12 @@
         <input asp-for="Password" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="ConfirmPassword"></label>
+        <label asp-for="ConfirmPassword">Confirm Password</label>
         <input asp-for="ConfirmPassword" class="form-control" />
     </div>
     <input type="hidden" asp-for="Email" class="form-control" />
     <input type="hidden" asp-for="Token" class="form-control" />
-    <button class="btn btn-primary" type="submit">Submit</button>
+    <button class="btn btn-primary mt-1" type="submit">Submit</button>
 </form>
 
+</div>
