--- a/CNewsProject/Views/Admin/AddType.cshtml
+++ b/CNewsProject/Views/Admin/AddType.cshtml
@@ -4,41 +4,40 @@
     ViewData["Title"] = "AddType";
 }
 
-<h1>Add new SubscriptionType</h1>
 
-<h4>SubscriptionType</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10">
+        <h3>Add new Subscription Type</h3>
+        <hr/>
         <form asp-action="AddType" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="TypeName" class="control-label"></label>
-                <input asp-for="TypeName" class="form-control" />
+                <input asp-for="TypeName" class="form-control"/>
                 <span asp-validation-for="TypeName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <input asp-for="Description" class="form-control"/>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" class="form-control"/>
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AccessLevel" class="control-label"></label>
-                <input asp-for="AccessLevel" class="form-control" />
+                <input asp-for="AccessLevel" class="form-control"/>
                 <span asp-validation-for="AccessLevel" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary mt-1"/>
             </div>
         </form>
+        <div>
+            <a asp-action="SubscriptionTypes">Back to List</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="SubscriptionTypes">Back to List</a>
-</div>
