--- a/CNewsProject/Views/Admin/AdminEdit.cshtml
+++ b/CNewsProject/Views/Admin/AdminEdit.cshtml
@@ -3,9 +3,8 @@
 @{
 	ViewData["Title"] = "UPDATE USER";
 }
-
-<h1 class="bg-info text-white">Update User</h1>
-<a asp-action="Users" class="btn btn-secondary">Back</a>
+<div class="offset-md-3 col-md-6 offset-sm-2 col-sm-8 offset-1 col-10">
+<h4 class="">Update User</h4>
 <div asp-validation-summary="All" class="text-danger"></div>
 
 <form asp-action="AdminEdit" method="post">
@@ -25,5 +24,7 @@
 		<label for="password">Password</label>
 		<input name="password" class="form-control" />
 	</div>
-	<button type="submit" class="btn btn-primary">Save</button>
+	<button type="submit" class="btn btn-primary mt-1">Save</button>
+	<a asp-action="Users" class="btn btn-danger mt-1">Back</a>
 </form>
+</div>
