--- a/CNewsProject/Views/Admin/Claims.cshtml
+++ b/CNewsProject/Views/Admin/Claims.cshtml
@@ -3,16 +3,25 @@
     ViewData["Title"] = "CLAIMS";
 }
 
-<h2 class="bg-primary m-1 p-1 text-white">Claims</h2>
+<style>
+    td:nth-of-type(1):before { content: "Subject"; }
+    td:nth-of-type(2):before { content: "Issuer"; }
+    td:nth-of-type(3):before { content: "Type"; }
+    td:nth-of-type(4):before { content: "Value"; }
+</style>
 
-<table class="table table-sm table-bordered">
+<h2 class="m-1 p-1">Claims</h2>
+<div class="table-responsive">
+<table class="table table-sm table-bordered" style="white-space: nowrap">
+    <thead>
     <tr>
         <th>Subject</th>
         <th>Issuer</th>
         <th>Type</th>
         <th>Value</th>
     </tr>
-
+    </thead>
+    <tbody>
     @foreach (var claim in Model.OrderBy(x => x.Type))
     {
         <tr>
@@ -22,4 +31,6 @@
             <td>@claim.Value</td>
         </tr>
     }
+    </tbody>
 </table>
+</div>
