--- a/CNewsProject/Views/ThePublisher/Decline.cshtml
+++ b/CNewsProject/Views/ThePublisher/Decline.cshtml
@@ -11,9 +11,9 @@
     </div>
 
     <div class="mb-3">
-        <label asp-for="Reason">Reason for Decline</label>
+        <label asp-for="Reason">Reason for Decline</label><br/>
         <textarea asp-for="Reason" rows="4" cols="50"></textarea>
     </div>
 
-    <button type="submit" class="btn-danger">Decline</button>
+    <button type="submit" class="btn btn-danger">Decline</button>
 </form>
