--- a/CNewsProject/Views/ThePublisher/SuccessfullyDeclined.cshtml
+++ b/CNewsProject/Views/ThePublisher/SuccessfullyDeclined.cshtml
@@ -4,3 +4,5 @@
 
 <h3>Successfully Declined with reason:</h3>
 <h4>@Model.Reason</h4>
+
+<a class="btn btn-secondary" asp-action="Index">Back To Pending</a>
