--- a/CNewsProject/Views/Admin/Roles.cshtml
+++ b/CNewsProject/Views/Admin/Roles.cshtml
@@ -9,7 +9,9 @@
 <a asp-action="CreateRole" class="btn btn-secondary">Create a Role</a>
 
 <table class="table table-sm table-bordered table-bordered">
-    <tr><th>ID</th><th>Name</th><th>Users</th><th>Update</th><th>Delete</th></tr>
+    <tr>
+        <th>ID</th><th>Name</th><th>Users</th><th>Update</th><th>Delete</th>
+    </tr>
 
     @* @foreach (var role in Model)
     {
@@ -23,49 +25,39 @@
     </td>
     <td>
     <a class="btn btn-sm btn-danger" asp-action="DeleteRole" asp-route-id="@role.Id">Delete</a>
-    </td>
+    </td>                
+
 
     </tr>
-    } *@
+    } *@ 
 
     @{
-        if (Model != null)
+        List<string> vitalRoles = new() { "Admin", "The Publisher", "Journalist" };
+
+        foreach (var role in Model)
         {
-
-            @foreach (var role in Model.Where(r => r.Name == "Admin" || r.Name == "The Publisher" || r.Name == "Journalist"))
-            {
-                <tr>
-                    <td>@role.Id</td>
-                    <td>@role.Name</td>
-                    <td i-role="@role.Id"></td>
-
-                    <td>
-                        <a class="btn btn-sm btn-primary" asp-action="UpdateRole" asp-route-id="@role.Id">Update</a>
-                    </td>
-                    <td>
-                        <a class="btn btn-sm btn-danger disabled" asp-action="DeleteRole" asp-route-id="@role.Id">Delete</a>
-                    </td>
-
-                </tr>
-            }
-
-
-            @foreach (var role in Model.Where(r => r.Name != "Admin" &&  r.Name != "The Publisher" && r.Name != "Journalist"))
-            {
-                <tr>
-                    <td>@role.Id</td>
-                    <td>@role.Name</td>
-                    <td i-role="@role.Id"></td>
-
-                    <td>
-                        <a class="btn btn-sm btn-primary" asp-action="UpdateRole" asp-route-id="@role.Id">Update</a>
-                    </td>
-                    <td>
-                        <a class="btn btn-sm btn-danger" asp-action="DeleteRole" asp-route-id="@role.Id">Delete</a>
-                    </td>
-
-                </tr>
-            }
+            <tr>
+                <td>@role.Id</td>
+                <td>@role.Name</td>
+                <td i-role="@role.Name"></td>
+                <td>
+                    <a class="btn btn-sm btn-primary" asp-action="UpdateRole" asp-route-id="@role.Id">Update</a>
+                </td>
+                <td>
+                    @{
+                        if (vitalRoles.Contains(role.Name))
+                        {
+                            <a class="btn btn-sm btn-danger disabled" asp-action="DeleteRole" asp-route-id="@role.Name">Delete</a>
+                        }
+                        else
+                        {
+                            <a class="btn btn-sm btn-danger" asp-action="DeleteRole" asp-route-id="@role.Id">Delete</a>
+                        }
+                    }
+        
+                </td>
+        
+            </tr>
         }
     }
 
