--- a/CNewsProject/Views/Subscription/Success.cshtml
+++ b/CNewsProject/Views/Subscription/Success.cshtml
@@ -1,9 +1,22 @@
-﻿<div class="text-center">
-	<h1 style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> Thank You For Subscribing! Enjoy Unlimited Access To Our Website. </h1>
-	<img src="https://ruperhat.com/wp-content/uploads/2020/06/Paymentsuccessful21.png" alt="Payment Successful Image" />
-	<h5 style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> We appreciate your choice! </h5>
-     <a href="/" class="payment-success-button">Continue Exploring</a>
-</div>
+﻿@model bool
+
+
+@{
+    if (Model)
+    {
+        <div class="text-center">
+            <h1 style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> Thank You For Subscribing! Enjoy Unlimited Access To Our Website. </h1>
+            <img src="https://ruperhat.com/wp-content/uploads/2020/06/Paymentsuccessful21.png" alt="Payment Successful Image" />
+            <h5 style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> We appreciate your choice! </h5>
+            <a href="/" class="payment-success-button">Continue Exploring</a>
+        </div>
+    }
+    else
+    {
+        <h1>Nah bruh</h1>
+    }
+}
+
 @* <style>
     .payment-success-button {
         display: inline-block;
