--- a/CNewsProject/Views/ThePublisher/Index.cshtml
+++ b/CNewsProject/Views/ThePublisher/Index.cshtml
@@ -4,15 +4,44 @@
     ViewData["Title"] = "The Publisher Page";
 }
 
-<h3>Pending Articles</h3>
+@{
+    List<string> statuses = new() { "Pending", "Approved", "Declined", "Draft" };
+    List<string> h3Ids = new() { "PendingId", "ApprovedId", "DeclinedId", "DraftId" };
+    List<string> colours = new() { "bg-primary", "bg-success", "bg-danger", "bg-secondary" };
+    List<string> bColours = new() { "#006666", "#336600", "#b30000", "#999999" };
+    List<string> Actions = new() { "EditArticle", "Article", "EditArticle", "EditArticle" };
+    List<string> Controllers = new() { "Journalist", "News", "Journalist", "Journalist" };
+    List<Article> list = new();
 
-<div style="overflow:auto">
-    @{
-        foreach(Article article in Model)
-        {
-            <div>
-                <a asp-action="Review" asp-route-id="@article.Id">@article.Headline</a><span>@article.WrittenDate</span>
-            </div>
+
+    <h3>Pending Articles</h3>
+    <div style="overflow:auto; max-height:500px; border: #006666 4px solid;" class="mb-4 bg-primary">
+        @{
+            if (Model.Count == 0)
+            {
+                <h4>There are currently no pending articles... >:(</h4>
+            }
+            else
+            {
+                int articleNum = 1;
+                foreach (var article in Model)
+                {
+                    if (articleNum % 2 == 0)
+                    {
+                        <div class="p-2" style="background: rgba(0, 0, 0, 0.14);">
+                            <h4 class="pb-1 pt-1 m-0 c-link-hover-container">@articleNum : <a style="color: black;" class="c-link-hover" asp-action="Review" asp-route-id="@article.Id">@article.Headline</a></h4>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="p-2">
+                            <h4 class="pb-1 pt-1 m-0  c-link-hover-container">@articleNum : <a style="color: black;" class="c-link-hover" asp-action="Review" asp-route-id="@article.Id">@article.Headline</a></h4>
+                        </div>
+                    }
+
+                    articleNum++;
+                }
+            }
         }
-    }
-</div>
+    </div>
+}
